# clipshelf

./: CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh.md  pyproject.toml
docs/: clippings-format.md
examples/: My Clippings.txt  README.md
scripts/: smoke.sh
src/clipshelf/: __init__.py  __main__.py  cli.py  dates.py  dedupe.py  errors.py  locales.py  model.py  parser.py  render.py
tests/: conftest.py  test_cli.py  test_dedupe.py  test_end_to_end.py  test_locales.py  test_model_dates.py  test_parser.py  test_render.py
