[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clipshelf"
version = "0.1.0"
description = "Turn a Kindle 'My Clippings.txt' into clean per-book Markdown notes, deduplicating overlapping highlight revisions offline."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "JaydenCJ", email = "aisingioro.kiyon@gmail.com" }]
keywords = ["kindle", "highlights", "clippings", "markdown", "notes", "dedupe", "ebook"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
clipshelf = "clipshelf.cli:main"

[project.urls]
Homepage = "https://github.com/JaydenCJ/clipshelf"
Repository = "https://github.com/JaydenCJ/clipshelf"
Issues = "https://github.com/JaydenCJ/clipshelf/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
